Customize callout rendering & fix blog page spacing

--- a/src/components/Markdown.module.css
+++ b/src/components/Markdown.module.css
@@ -35,34 +35,25 @@
 
   max-width: 70ch;
 
-  &>p,
   &>ol,
-  &>ul {
-    @apply mt-5;
+  & ul {
+    @apply ml-2
+  }
+
+  &>p+p {
+    @apply mt-3;
   }
 
   h2 {
-    @apply text-3xl font-bold mt-11;
+    @apply text-3xl font-bold mt-8 mb-2 tracking-wide;
   }
 
   h3 {
-    @apply text-2xl font-medium mt-7;
-
-    &+p,
-    &+ol,
-    &+ul {
-      @apply mt-1.5;
-    }
+    @apply text-xl font-medium mt-6 mb-0.5;
   }
 
   h4 {
-    @apply text-base font-medium mt-5;
-
-    &+p,
-    &+ol,
-    &+ul {
-      @apply mt-0;
-    }
+    @apply text-base font-medium mt-4 tracking-tight;
   }
 
   h2,
@@ -72,12 +63,17 @@
   }
 
   blockquote {
-    @apply pl-2 py-0.5 mt-5 border-l-4 ml-2 text-neutral-800 dark:text-neutral-100 border-neutral-500 dark:border-neutral-300;
+    @apply pl-3 py-0.5 mt-4 mb-3 border-l-2 ml-2 text-neutral-800 dark:text-neutral-100 border-neutral-500 dark:border-neutral-300;
 
     p {
-      @apply text-neutral-500 dark:text-neutral-400 text-xl tracking-wide italic first:mt-0;
+      @apply text-neutral-500 dark:text-neutral-400 text-xl tracking-wide first:mt-0;
     }
   }
+}
+
+.callout {
+  @apply border border-gray-600 p-[12px] my-5 rounded-md;
+  color: red;
 }
 
 .toc-root {
